# eid-holo

./: bundle.json
ui/: holo_chat.css  index.html
zomes/card/: zome.json
zomes/card/code/: .build  Cargo.toml
zomes/card/code/src/: card.rs  lib.rs
